Add login screen, main screen and update product status when client arrives the store

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
 	buildToolsVersion "26.0.1"
 	defaultConfig {
 		applicationId "com.retail.hackathon.retail"
+		multiDexEnabled true
 		minSdkVersion 21
 		targetSdkVersion 26
 		versionCode 1
@@ -17,6 +18,10 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
 	}
+
+	packagingOptions {
+		exclude 'META-INF/rxjava.properties'
+	}
 }
 
 dependencies {
@@ -24,8 +29,10 @@ dependencies {
 	androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
+
 	compile 'com.estimote:sdk:1.0.12'
-	compile 'com.android.support:appcompat-v7:26.+'
+	compile 'com.liferay.mobile:liferay-screens:+'
+	compile 'com.liferay.mobile:liferay-westeros-viewset:+'
 	compile 'com.android.support.constraint:constraint-layout:1.0.2'
 	testCompile 'junit:junit:4.12'
 }
