--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest package="com.retail.hackathon.retail"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<application android:name=".RetailApplication"
+	<application
+		android:name=".RetailApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
@@ -12,12 +13,15 @@
 		<meta-data
 			android:name="com.google.android.nearby.messages.API_KEY"
 			android:value="AIzaSyAy0WD1etIxD67YcV-HBgnUy3AMnLqjSLw" />
-		<activity android:name=".MainActivity">
+
+		<activity android:name=".LoginActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+		</activity>
+		<activity android:name=".MainActivity">
 		</activity>
 	</application>
 
